# backend-for-steam-monitoring

./: .gitignore  README.md  changelog  main.py  pyproject.toml
app/: types.py
app/api/v1/dependency/: user.py
app/api/v1/middlewares/: __init__.py  log.py  timeout.py
app/api/v1/routers/: __init__.py
app/api/v1/utils/: http.py
app/core/: config.py  security.py  utils.py
app/db/redis/: __init__.py  base.py
app/db/sql/: session.py
app/db/sql/models/: __init__.py  base.py  model.py
app/db/sql/repository/: base.py  skin_repository.py  user_repository.py
app/logs/: __init__.py  logger.py
app/logs/api/: 2025-05-12.txt  2025-05-13.txt  2025-05-14.txt  2025-05-16.txt  2025-05-17.txt
app/logs/db/: 2025-05-16.txt  2025-05-17.txt
app/logs/http/: 2025-05-13.txt  2025-05-16.txt  2025-05-17.txt
app/logs/redis/: 2025-05-12.txt  2025-05-16.txt  2025-05-17.txt
app/logs/workers/monitoring/: 2025-05-16.txt  (+1 more)
app/response/: __init__.py  abstract_response.py  base.py  error.py  success.py
app/schemas/v1/: __init__.py  base.py  enums.py  schema.py
app/utils/: http.py
app/workers/: monitoring.py
migrations/: env.py
migrations/versions/: 110609cafe95_add_unique_to_telegram_id_and_skin_id.py  35305aa1b439_new_primary_key_in_skins.py  3fae42523b5f_foreign_key_in_skins.py  524883cbce01_telegram_id_bigint.py  5faad3e1f564_mto_for_users_and_skins.py  717dcffbd058_.py  719df2218fdb_add_is_admin_in_users.py  85f1cf0904b7_telegram_id_is_primary_key.py  c115e74d2f1e_percent_current_price_in_skins.py  cc0c4080d80c_currency_to_int.py  d1385768b289_initial.py
(+8 files in other folders)
